@startuml
class Bundesland {
name
}

class Partei {
name
gruendungsjahr
}

class Wahl {
jahr
}

class Landesliste {
}

Landesliste "*" -- "1" Bundesland : gehoert zu >
Landesliste "*" -- "1" Partei : ist von >
Landesliste "*" -- "1" "Wahl" : gehoert zu >

class Listenplatz {
position
}

class Kandidat {
vorname
nachname
geschlecht
alter
beruf
}

Landesliste "1" *-- "1..*" Listenplatz : enthaelt >
Listenplatz "0..*" -- "1" Kandidat : < steht auf

class Wahlkreis {
nummer
name
}

Wahlkreis "*" --* "1" Bundesland

class Bevölkerung {
anzahl
}

Bevölkerung "1" --* "1" Wahlkreis : < hat
Bevölkerung "299" -- "1" Wahl : gueltig fuer >

class Direktkandidatur {
}

Direktkandidatur "0..*" -- "1" Kandidat : < tritt an
Direktkandidatur "*" -- "1" Wahlkreis : in >
Direktkandidatur "*" -- "0..1" Partei : von >
Direktkandidatur "*" -- "1" Wahl : in >


class Stimme {
ungueltig
}

Stimme "*" -- "1" Direktkandidatur : Erststimme >
Stimme "*" -- "1" Landesliste : Zweitstimme >
@enduml